logging/base/kibana/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  ports:
  - name: http
    port: 5601
